--- a/resources/products.css
+++ b/resources/products.css
@@ -360,6 +360,15 @@
 #canc i{
 transform: rotate(45deg);
 }
+.monokai_mode #submit_form{
+    background:linear-gradient(90deg,#47493e,#47493E, #47493e) ;
+    border: solid 1px rgb(128 128 128 / 57%);
+
+}
+.monokai_mode #submit_form:hover{
+    background:linear-gradient(90deg,rgb(54, 54, 54),#47493E, #47493e) ;
+
+}
 #submit_form{
     background:linear-gradient(90deg,rgb(255, 255, 255),rgb(255, 255, 255), rgb(255, 255, 255)) ;
 
@@ -397,15 +406,24 @@ transform: rotate(45deg);
     background:linear-gradient(90deg,rgb(255, 174, 120),rgb(255, 255, 255), rgb(255, 255, 255)) ;
 
 }
+.monokai_mode #submit_form select,
+.monokai_mode #submit_form input,
 .dark_mode #submit_form select,
 .dark_mode #submit_form input{
     color: white !important;
     background-color: rgba(0, 0, 0, 0.329) !important;
 }
+.monokai_mode #submit_prod,
 .dark_mode #submit_prod{
     color: white;
     background-color: #383838;
     outline: solid 1px rgba(119, 119, 119, 0.596);
+}
+
+.monokai_mode #submit_prod:hover{
+    outline-color: rgb(255, 104, 3);   
+    background-color: rgba(255, 104, 3, 0.644);
+
 }
 .dark_mode #submit_prod:hover{
     outline-color: rgb(255, 104, 3);   
@@ -579,10 +597,10 @@ transform: rotate(45deg);
 #submit_form:hover .label_style h3{
     background-color: rgb(161, 67, 4);
 }
+.monokai_mode .label_style h3,
 .dark_mode .label_style h3{
     background-color: #2b2b2b;
     border: solid 1px rgba(201, 201, 201, 0.534);
-
 }
 .label_style p{
     height: .15rem;
@@ -668,8 +686,62 @@ transform: rotate(45deg);
     border-left: solid 1px rgba(141, 141, 141, 0.788);
     border-right: solid 1px rgba(141, 141, 141, 0.788);
 }
+
+.monokai_mode .response{
+    background-color: #47493e;
+    color: rgb(206, 206, 206);
+
+}
 .dark_mode .response{
     background-color: #000000a1;
     color: rgb(206, 206, 206);
 
+}
+
+.action_select{
+    right: 0;
+    transform: translateX(3.3rem) translateY(-1rem);
+    position: absolute;
+    height: fit-content;
+    background-color: #020202fa;
+    border: solid 1px rgb(199 199 199 / 54%);
+    display: none;
+    width: 6rem;
+    flex-direction: column;
+    padding:.4rem 0 ;
+    justify-content: center;
+    border-radius: .4rem;
+    animation-name: showmorepane;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+}
+@keyframes showmorepane {
+    0%{
+        opacity: 0;
+    }
+}
+.action_select::after{
+    z-index: -1;
+    position: absolute;
+    height: 1rem;
+    width: 1rem;
+    content: "";
+    background-color: #020202fa;
+    transform: translateX(-.5rem) translateY(1rem) rotate(45deg);
+    border-bottom: solid 1px rgb(199 199 199 / 54%);
+    border-left: solid 1px rgb(199 199 199 / 54%);
+    
+}
+.action_selectNew{
+    display: flex;
+}
+.action_select > *{
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    padding: .4rem .4rem .4rem .8rem ;
+    cursor: pointer;
+}
+.action_select > *:hover{
+    color: rgb(212, 88, 5);
 }
