--- a/resources/style.css
+++ b/resources/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.middle_side {
+    background-color: rgba(199, 199, 199, 0.623);
+}
+
 .monokai_mode .middle_side {
     background-color: #47493e;
     color: rgb(199, 199, 199);
@@ -11,19 +16,22 @@
 
 .dark_mode .middle_side {
     background-color: #1F1F1F;
-    background-image: radial-gradient(rgb(255, 255, 255) 0.5px,#1F1F1F 0.5px);
+    background-image: radial-gradient(rgb(255, 255, 255) 0.5px, #1F1F1F 0.5px);
     background-size: 35px 35px;
     color: rgb(199, 199, 199);
 }
+
 a {
     text-decoration: none;
 }
+
 .monokai_mode #header {
-    background-color:#1E1F1C !important;
-    color: rgb(199, 199, 199) ;
+    background-color: #1E1F1C !important;
+    color: rgb(199, 199, 199);
 }
+
 .dark_mode #header {
-    background-color:#181818 !important;
+    background-color: #181818 !important;
     color: rgb(199, 199, 199);
 }
 
@@ -40,13 +48,15 @@ body {
     border-bottom: rgba(0, 0, 0, 0.233) 2px solid;
     position: absolute;
 }
-.monokai_mode #header{
+
+.monokai_mode #header {
     border-bottom: rgba(136, 136, 136, 0.315) 1px solid;
-    
+
 }
-.dark_mode #header{
+
+.dark_mode #header {
     border-bottom: rgba(136, 136, 136, 0.315) 1px solid;
-    
+
 }
 
 .header_inner {
@@ -72,18 +82,20 @@ body {
 #header section #search {
     border-radius: 1rem;
     outline: solid 1px rgb(189, 189, 189);
-    padding: 0 2.4rem 0 1rem  ;
+    padding: 0 2.4rem 0 1rem;
     font-size: 1rem;
     width: 100%;
     min-width: 2rem;
     height: 2.4rem;
     border: none;
 }
+
 .monokai_mode #search {
     outline: solid 1px #62665c80 !important;
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
 }
+
 .dark_mode #search {
     outline: solid 1px #62665c80 !important;
     background-color: #181818;
@@ -108,12 +120,15 @@ body {
     outline: solid 1px black;
 
 }
+
 .monokai_mode #search:focus {
     outline: solid 1px #9b9b9b !important;
 }
+
 .dark_mode #search:focus {
     outline: solid 1px #9b9b9b !important;
 }
+
 #header section:nth-child(2) {
     width: 30%;
     display: flex;
@@ -122,7 +137,7 @@ body {
     /* padding: 0 2rem; */
     align-items: center;
 }
- 
+
 
 #header section:nth-child(2)>* {
     border: solid 1px rgba(0, 0, 0, 0.123);
@@ -134,11 +149,13 @@ body {
     place-items: center;
 
 }
+
 .monokai_mode #header section:nth-child(2)>* {
     background-color: #47493e;
     border: solid 1px rgba(136, 136, 136, 0.315);
-color: rgb(199, 199, 199);
+    color: rgb(199, 199, 199);
 }
+
 .dark_mode #header section:nth-child(2)>* {
     color: rgb(199, 199, 199);
     background-color: #181818;
@@ -195,20 +212,23 @@ color: rgb(199, 199, 199);
     flex-direction: column;
     justify-content: space-between;
     background-color: #ffffff;
-    border: 1px rgb(161, 161, 161) ;
+    border: 1px rgb(161, 161, 161);
     border-radius: 0 1rem 0 0;
 }
-.monokai_mode .side_nav{
+
+.monokai_mode .side_nav {
     color: rgb(199, 199, 199);
-    
+
 }
-.monokai_mode .side_nav2d{
+
+.monokai_mode .side_nav2d {
     background-color: #1E1F1C;
     border: solid 1px rgba(136, 136, 136, 0.589) !important;
     /* border: solid #47493e 1px; */
 
 }
-.dark_mode .side_nav2d{
+
+.dark_mode .side_nav2d {
     background-color: #181818;
     border: solid 1px rgba(136, 136, 136, 0.589) !important;
     /* border: solid #47493e 1px; */
@@ -331,6 +351,7 @@ color: rgb(199, 199, 199);
     overflow: hidden;
     padding-top: 4rem;
 }
+
 /* .monokai_mode .products{
     background-color: #47493e;
 } 
@@ -347,14 +368,16 @@ color: rgb(199, 199, 199);
     position: relative;
     overflow: hidden;
 }
-.monokai_mode .counting{
+
+.monokai_mode .counting {
     background-color: #1E1F1C;
-    border-left:solid 1px rgba(189, 189, 189, 0.459) ;
+    border-left: solid 1px rgba(189, 189, 189, 0.459);
 
 }
-.dark_mode .counting{
+
+.dark_mode .counting {
     background-color: #181818;
-    border-left:solid 1px rgba(189, 189, 189, 0.459) ;
+    border-left: solid 1px rgba(189, 189, 189, 0.459);
 
 }
 
@@ -391,11 +414,13 @@ color: rgb(199, 199, 199);
     width: 96%;
     overflow: hidden;
 }
-.monokai_mode .category_nav{
+
+.monokai_mode .category_nav {
     background-color: #1E1F1C !important;
     color: rgb(199, 199, 199);
 }
-.dark_mode .category_nav{
+
+.dark_mode .category_nav {
     background-color: #181818 !important;
     color: rgb(199, 199, 199);
 }
@@ -410,7 +435,7 @@ color: rgb(199, 199, 199);
 }
 
 .category_nav_inner li {
-    border: solid 1px rgba(136, 136, 136, 0) ;
+    border: solid 1px rgba(136, 136, 136, 0);
     cursor: pointer;
     border-radius: .3rem;
     padding: .2rem .8rem;
@@ -441,12 +466,14 @@ color: rgb(199, 199, 199);
     background-color: rgb(161, 161, 161);
     width: 2em;
 }
-.monokai_mode #allcategory_open{
+
+.monokai_mode #allcategory_open {
     background-color: #595a4e !important;
 }
-.dark_mode #allcategory_open{
+
+.dark_mode #allcategory_open {
     background-color: #181818 !important;
-    border-left:solid 1px rgba(136, 136, 136, 0.589) ;
+    border-left: solid 1px rgba(136, 136, 136, 0.589);
 }
 
 #allcategory_open img {
@@ -458,6 +485,7 @@ color: rgb(199, 199, 199);
     background-color: #8c8d80 !important;
     cursor: pointer;
 }
+
 .dark_mode #allcategory_open:hover {
     background-color: #1818184d !important;
     cursor: pointer;
@@ -466,11 +494,13 @@ color: rgb(199, 199, 199);
 .category_nav_inner::-webkit-scrollbar {
     display: none;
 }
-.dark_mode .totaling select{
+
+.dark_mode .totaling select {
     background-color: #181818;
     color: rgb(199, 199, 199);
 
 }
+
 .category_nav li {
     list-style: none;
     font-size: .9rem;
@@ -533,15 +563,17 @@ img {
     border-radius: .5rem;
 
 }
-.monokai_mode .products_content ol{
+
+.monokai_mode .products_content ol {
     background-color: #1E1F1C;
-    color:rgb(199, 199, 199) ;
+    color: rgb(199, 199, 199);
     border: solid 1px rgba(189, 189, 189, 0.445);
 
 }
-.dark_mode .products_content ol{
+
+.dark_mode .products_content ol {
     background-color: #181818;
-    color:rgb(199, 199, 199) ;
+    color: rgb(199, 199, 199);
     border: solid 1px rgb(189 189 189 / 26%);
 
 }
@@ -556,11 +588,12 @@ img {
 }
 
 
-.products_content ol li:nth-child(1){
+.products_content ol li:nth-child(1) {
     width: 7rem;
     border-radius: 50%;
     overflow: hidden;
 }
+
 .products_content ol li {
     width: 100%;
     display: flex;
@@ -604,7 +637,7 @@ img {
     scrollbar-width: thin;
     scrollbar-gutter: stable;
 }
- 
+
 
 
 #counter_body ol {
@@ -617,23 +650,27 @@ img {
 
 
 }
+
 .monokai_mode #counter_body {
     border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
 
 }
+
 .dark_mode #counter_body {
     border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
     background-color: #181818;
     color: rgb(199, 199, 199);
 }
-.monokai_mode #counter_body ol{
-    border:solid 1px rgb(189 189 189 / 26%) !important;
+
+.monokai_mode #counter_body ol {
+    border: solid 1px rgb(189 189 189 / 26%) !important;
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
-    
+
 }
-.dark_mode #counter_body ol{
-    border:solid 1px rgb(189 189 189 / 26%) !important;
+
+.dark_mode #counter_body ol {
+    border: solid 1px rgb(189 189 189 / 26%) !important;
     background-color: #181818;
     color: rgb(199, 199, 199);
 }
@@ -644,14 +681,16 @@ img {
     background-color: rgba(179, 179, 179, 0.151) !important;
 
 }
-.monokai_mode .bxselected{
+
+.monokai_mode .bxselected {
     box-shadow: -.2rem .1rem .1rem #A27C12;
-    
+
 }
 
 #counter_body ol:hover {
     background-color: rgba(179, 179, 179, 0.151) !important;
 }
+
 .monokai_mode #counter_body ol:hover {
     background-color: rgba(179, 179, 179, 0.151);
 }
@@ -667,9 +706,10 @@ img {
 
 }
 
-#counter_body ol li>*:nth-child(5){
+#counter_body ol li>*:nth-child(5) {
     position: relative;
 }
+
 #counter_body ol li>* {
     display: flex;
     align-items: center;
@@ -719,18 +759,21 @@ img {
     padding: 0 1rem;
     height: 1.8rem;
 }
-.monokai_mode .qntity input{
+
+.monokai_mode .qntity input {
     background-color: #1E1F1C;
     border: none;
     outline: solid 1px rgba(161, 161, 161, 0.39);
     color: rgb(199, 199, 199);
 }
-.dark_mode .qntity input{
+
+.dark_mode .qntity input {
     background-color: #181818;
     border: none;
     outline: solid 1px rgba(161, 161, 161, 0.39);
     color: rgb(199, 199, 199);
 }
+
 .quantityShow {
     height: 5rem !important;
     transition: .1s;
@@ -752,7 +795,7 @@ img {
     top: 50%;
     left: 50%;
     font-size: .9rem;
-    transform:translate(-50%,-50%) rotate(45deg) !important;
+    transform: translate(-50%, -50%) rotate(45deg) !important;
     cursor: pointer;
     display: grid;
     border-radius: 50%;
@@ -763,7 +806,7 @@ img {
     background-color: rgba(161, 161, 161, 0.219);
 }
 
-#counter_body li > *:nth-child(5) i:hover {
+#counter_body li>*:nth-child(5) i:hover {
     transition: .3s;
     background-color: rgb(189 5 5 / 85%);
 
@@ -786,14 +829,16 @@ img {
     gap: .2rem;
 }
 
-.monokai_mode .totaling{
+.monokai_mode .totaling {
     background-color: #47493e;
     color: rgb(199, 199, 199);
 }
-.dark_mode .totaling{
+
+.dark_mode .totaling {
     background-color: #1F1F1F;
     color: rgb(199, 199, 199);
 }
+
 .totaling section {
     display: flex;
     justify-content: space-between;
@@ -855,4 +900,67 @@ img {
 .totaling section #proceed {
     outline: solid 1px #ffbe0a;
     background-color: #A27C12;
+}
+
+
+.notification {
+    width: fit-content;
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    border: solid 1px rgba(167, 167, 167, 0.692);
+    display: grid;
+    grid-template-columns: 2rem auto;
+    padding: .8rem 1rem;
+    right: -0rem;
+    border-radius: .4rem;
+    top: 4.5rem;
+    overflow: hidden;
+    place-items: center;
+    transition: .9s ;
+    animation-name: showNotif;
+    animation-duration: .8s;
+    animation-iteration-count: 1;
+}
+.notification i{
+    animation-name: on_notif;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes on_notif {
+ 50% {
+        transform:scale(1.13);
+    }
+}
+
+@keyframes showNotif {
+    0% {
+        transform: translateX(20rem);
+    }
+}
+
+.monokai_mode .notification {
+
+    background-color: #1E1F1C;
+}
+
+.dark_mode .notification {
+
+    background-color: #181818;
+}
+
+.notification i {
+    background-color: rgb(0, 199, 0);
+    padding: .2rem;
+    border-radius: 50%;
+    color: white;
+}
+
+.notification::after {
+    left: 0;
+    position: absolute;
+    content: "";
+    width: .3rem;
+    height: 100%;
+    background-color: rgb(0, 199, 0);
 }
