--- a/resources/cashier.css
+++ b/resources/cashier.css
@@ -125,6 +125,25 @@
     list-style: none;
     position: relative;
 }
+.change-cont{
+    display: block !important;
+}
+.pay-cont > *,
+#addDC{
+    animation-name: cashierFormAnimate;
+    animation-duration: .4s;
+    animation-iteration-count: 1;
+    transform: translateX(0) rotate(0);
+
+}
+@keyframes cashierFormAnimate {
+    0%{
+        opacity: 0;
+        transform: translateX(3rem) rotate(9deg);
+    }
+}
+.change-cont,
+.pay-cont,
 .discount-form-cont{
     z-index:1 ;
     display: none;
@@ -133,10 +152,105 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+#pay input:focus{
+    outline: solid 1px rgba(111, 111, 111, 0.616);
+
+}
+#pay input{
+    border: none;
+    outline: solid 1px rgb(111 111 111 / 40%);
+}
+.change-cont > *,
+#pay {
+    gap: .8rem;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.change-cont > * p{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.change-cont > * h4{
+    font-size: 2.5rem;
+}
+.change-cont > * {
+    position: relative;
+
+}
+ 
+.change button:hover{
+background-color: #ffbe0a79;
+
+}
+.change button{
+    padding: .8rem 2.5rem;
+    border: none;
+    background-color: #a27c126c;
+    border: solid 1px #ffbe0a;
+    border-radius: .4rem;
+}
+.actionPay{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+.monokai_mode .change button,
+.dark_mode .change button,
+.dark_mode .actionPay button,
+.monokai_mode .actionPay button{
+    color: rgb(199, 199, 199);
+}
+.actionPay button{
+    padding: .7rem 3.3rem;
+    border-radius: .3rem;
+    cursor: pointer;
+}
+.actionPay #cancCM{
+    border: solid 1px rgba(126, 126, 126, 0.795);
+    background-color: #3a3a396e;
+
+}
+.actionPay #cancCM:hover{
+    background-color: #50504e;
+
+}
+.actionPay #pay_orders{
+    background-color: #a27c126c;
+    border: solid 1px #ffbe0a;
+}
+.actionPay #pay_orders:hover{
+background-color: #ffbe0a79;
+
+}
+#CMmoney{
+text-align: start;
+    height: 3.5rem;
+    padding: 0 1.5rem;
+    border-radius: .5rem;
+    font-size: 1.2rem;
+
+}
+.monokai_mode .change-cont > *,
+.monokai_mode .pay-cont form ,
+.monokai_mode .discount-form {
+    background-color: #1E1F1C !important;
+
+}
+.dark_mode .change-cont > *,
+.dark_mode .pay-cont form,
 .dark_mode .discount-form {
     background-color: #181818 !important;
     border: solid 1px rgb(160 160 160 / 18%);
 }
+
+.change-cont > *,
+.pay-cont form,
 .discount-form {
     background-color: white;
     width: 26rem;
@@ -148,10 +262,18 @@
     gap: 1rem;
     padding: 1.5rem 0 1rem;
 }
-.discount-form p{
+.pay-cont form{
+    height: fit-content;
+}
+.discount-form section p{
     font-size: .8rem;
     position: absolute;
     margin-left: .5rem;
+}
+.products .notification{
+    right: 30%;
+    top: 5.1rem;
+
 }
 .discount-form section:nth-child(1) p{
     margin-top: .2rem;
@@ -176,6 +298,7 @@
 
 }
 
+
 .monokai_mode .discount-form section:nth-child(1) input:focus ,
 .monokai_mode .discount-form section:nth-child(2) input:focus ,
 .dark_mode .discount-form section:nth-child(1) input:focus ,
@@ -193,6 +316,11 @@
     padding: 0 1rem ;
 
 }
+.dark_mode .pay-cont form input,
+.monokai_mode .pay-cont form input,
+.monokai_mode .discount-form section:nth-child(2) select,
+.monokai_mode .discount-form section:nth-child(1) input ,
+.monokai_mode .discount-form section:nth-child(2) input,
 .dark_mode .discount-form section:nth-child(2) select,
 .dark_mode .discount-form section:nth-child(1) input ,
 .dark_mode .discount-form section:nth-child(2) input {
@@ -255,11 +383,35 @@
 .side_nav{
     z-index: 2;
 }
+ 
 
+.monokai_mode #gcashNum,
+.monokai_mode #pmethod,
+.dark_mode #gcashNum,
+.dark_mode #pmethod{
+    background-color: #181818;
+    color: rgb(199, 199, 199);
+    outline: solid 1px rgb(111 111 111 / 40%);
+}
 
+#gcashName,
+#gcashNum,
+#pmethod{
+    width: 18.2rem;
+    height: 3rem;
+    text-align: center;
+    border: none;
+    border-radius: .4rem;
+}
 
+#gcashName,
+#gcashNum{
+    display: none;
+    padding: 0 1.5rem;
+    text-align: start;
+    font-size: 1.2rem;
 
-
+}
 
 
 
