--- a/resources/style.css
+++ b/resources/style.css
@@ -944,14 +944,13 @@ img {
 }
 
 .notification i {
-    animation-name: on_notif;
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
 
 @keyframes on_notif {
     50% {
-        transform: scale(1.13);
+        transform: scale(1.13) ;
     }
 }
 
@@ -973,11 +972,21 @@ img {
 
 .notification i {
     background-color: rgb(0, 199, 0);
-    padding: .2rem;
+    height: 1.5rem;
+    width:  1.5rem;
+    display: grid;
+    place-items: center;
     border-radius: 50%;
     color: white;
 }
+.newNotif i{
+    transform: rotate(45deg);
+    background-color: rgb(199, 30, 0) !important;
+}
 
+.newNotif::after{
+    background-color: rgb(199, 30, 0) !important;
+}
 .notification::after {
     left: 0;
     position: absolute;
@@ -987,3 +996,169 @@ img {
     background-color: rgb(0, 199, 0);
 }
 
+
+.category-response,
+.response {
+    position: absolute;
+    height: fit-content;
+    overflow: hidden;
+    max-width: 19rem;
+    min-width: 14rem;
+    width: fit-content;
+    text-align: center;
+    padding: .4rem 1rem .5rem;
+    background-color: #ffffff;
+    color: black;
+    top: 100.7%;
+    right: 0;
+    border-radius: 0 0 .4rem .4rem;
+    border-bottom: solid 1px rgba(141, 141, 141, 0.788);
+    border-left: solid 1px rgba(141, 141, 141, 0.788);
+    border-right: solid 1px rgba(141, 141, 141, 0.788);
+}
+
+.category-response>*,
+.response>* {
+    margin-top: .1rem;
+    animation-name: responseEntry;
+    animation-duration: .7s;
+    animation-iteration-count: 1s;
+}
+
+@keyframes responseEntry {
+    0% {
+        opacity: 0;
+        transform: translateX(-2rem);
+    }
+}
+
+.monokai_mode .category-response,
+.monokai_mode .response {
+    background-color: #47493e;
+    color: rgb(206, 206, 206);
+
+}
+
+.dark_mode .category-response,
+.dark_mode .response {
+    background-color: #000000a1;
+    color: rgb(206, 206, 206);
+
+}
+.receipt{
+    margin-top: 1rem;
+    position: absolute;
+    width: 20rem;
+    font-size: .9rem;
+}
+.receipt_logo_cover{
+    padding: .2rem 1rem;
+    border-radius: 50%;
+    width: fit-content;
+    background-color: rgb(161, 161, 161);
+}
+.desc{
+    text-align: center;
+    padding: 0 2.2rem;
+    display: grid;
+    place-items: center;
+}
+.receipt section{
+    margin: 1rem 0 1.3rem;
+    padding: 0 1.3rem;
+}
+.receipt section ol:nth-child(3){
+    grid-template-columns: 30% auto;
+
+}
+.receipt section ol{
+    font-size: .75rem;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    list-style: none;
+    place-items: center;
+    padding: .5rem 0;
+    justify-content: center;
+    gap: .3rem;
+}
+.receipt .details section ol li{
+    width: 100%;
+}
+.orders-receipt{
+    padding: 0 1.3rem;
+}
+.receipt section ol li:nth-child(1){
+    font-weight: 800;
+
+}
+.receipt section ol li:nth-child(2){
+    text-align: start;
+}
+.receipt section ol li:nth-child(3){
+    text-align: end;
+}
+#receipt_logo{
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    height: 3rem;
+    filter: grayscale(100%);
+}
+
+.receipt .orders-receipt h3{
+    width: 100%;
+    text-align: center;
+    margin-bottom: .5rem;
+}
+.receipt .orders-receipt table tr{
+    height: 2rem;
+
+}
+.receipt .orders-receipt table thead{
+    border-top: solid 1px rgba(0, 0, 0, 0.452);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.452);
+}
+
+.receipt .orders-receipt table td:nth-child(1),
+.receipt .orders-receipt table thead th:nth-child(1){
+    width: 3.5rem;
+    text-align: center;
+
+}
+.receipt .orders-receipt table td:nth-child(2),
+.receipt .orders-receipt table thead th:nth-child(2){
+    width: 15rem;
+    text-align: start;
+    padding:0  1rem 0 .5rem;
+}
+
+.receipt .orders-receipt table td:nth-child(3),
+.receipt .orders-receipt table thead th:nth-child(3){
+    width: 4rem;
+    text-align: end;
+    padding-right: .5rem;
+
+}
+
+.receipt-summary{
+    padding: .3rem 1.3rem;
+
+}
+.receipt-summary ol:nth-child(5){
+    font-size: 1.1rem !important;
+    font-weight: 800;
+}
+.receipt-summary ol:nth-child(3){
+    margin-bottom: .3rem;
+}
+.receipt-summary ol{
+    font-size: .98rem;
+    list-style: none;   
+    padding: .1rem .5rem;
+    display: flex; 
+    justify-content: space-between;
+}
+
+.th{
+    margin: 2rem 0;
+    text-align: center;
+}
